# face-recognition

./: .dockerignore  .gitignore  attendance.csv  attendance.py  dataset.py  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/: .env  __init__.py  app.py  attendance.xlsx  cleanup_db.py  database.py  gunicorn_config.py  migrate_data.py  run.py
backend/templates/: attendance.html  camera_status.html  index.html  register.html
data/: faces_data.pkl  names.pkl
