[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.22.0",
    "dlib==19.24.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition-attendance"
version = "1.0.0"
description = "Face Recognition Based Attendance System"
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.3",
    "opencv-python-headless==4.8.0.74",
    "face-recognition==1.3.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "pymongo==4.4.1",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "openpyxl==3.1.2"
]
